fixed alignment

--- a/css/main.css
+++ b/css/main.css
@@ -4,41 +4,39 @@
 @-webkit-viewport { width: device-width; scale: 1; }
 @viewport { width: device-width; scale: 1; }
 
+html {
+  font-family: 'Norican', cursive;
+  font-family: "Raleway", sans-serif;
 
-  html{
-    font-family: 'Handlee', cursive;
-    font-family: 'Raleway', sans-serif;
-
-  }
+}
 
 a {
   text-decoration: none;
   color: #50332e;
 }
 
-.bar{
+.bar {
   background-color: #b7957f;
 }
 
-h1, h2{
+h1, h2 {
   color: white;
   font-family: 'Norican', cursive;
 }
 
-
-.section-header{
+.section-header {
   color: #b7957f;
 }
 
-.nav{
+.nav {
   color: #50332e;
   text-align: left;
 
 }
+
 .nav a:hover {
   color: white;
 }
-
 
 .banner {
   position: relative;
@@ -48,62 +46,68 @@ h1, h2{
 .banner-content {
   color: white;
   position: absolute;
-  width: 100%
-
   left: 0%;
-  bottom:.5px;
+  bottom: .5px;
 }
 
 .btn {
-border: 0px solid #333;
-background-color: #b7957f;
-color: white;
+  border: .2px solid #333;
+  background-color: #b7957f;
+  color: white;
 }
+
 .btn a:hover {
-background-color: rgba(0, 0, 0, 0.5); /* 70% transparent black */
   color: #50332e;
 }
 
 section {
   text-align: center;
 }
- .line-bar {
-     border-top: .5px solid #b7957f;
- }
 
- img{
-   width: 100%;
- }
+.line-bar {
+  border-top: .5px solid #b7957f;
+}
 
- footer {
+img {
+  width: 100%;
+}
+
+footer {
   background: url("../images/bomb.svg") center bottom / cover;
   background-size: 67px auto;
-  background-color: #50332e;;
+  background-color: #50332e;
   color: #fff;
+}
 
 @media only screen and (min-width: 25em) {
 
 }
+
 @media only screen and (min-width: 38em) {
-  .about-text{
+
+  .about-text {
     text-align: left;
   }
-  .nav{
-    text-align:right;
-  }
-.location-text{
-  text-align: left;
-}
-.banner-content {
-  color: white;
-  position: absolute;
-  width: 100%
 
-  left: 0%;
-  bottom:10%;
+  .nav {
+    text-align: right;
+  }
+
+  .location-text {
+    text-align: left;
+  }
+
+  .banner-content {
+    color: white;
+    position: absolute;
+    width: 100%;
+    left: 0%;
+    bottom: 10%;
+  }
 }
 
 @media only screen and (min-width: 60em) {
+
 }
 
 @media only screen and (min-width: 90em) {
